--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
         <hr>
         <div id = "game-board"></div>
         <div id = "letters"></div> 
+        
         <button class = "button button1" id = "arrowUp" onclick="arrowUp()">&#x21e7;</button>
         <button class = "button button2" id = "arrowDown" onclick="arrowDown()">&#x21e9;</button>
         <button class = "button button3" id = "arrowLeft" onclick="arrowLeft()">&#x21e6;</button>
         <button class = "button button4" id = "arrowRight" onclick="arrowRight()">&#x21e8;</button>
         <button class = "button button5" id = "arrowRight" onclick="resetWords()">&#x21bb;</button>
-
+        <div class="stopWatch">
+            <div class="circle">
+                <span class="time" id="display">00:00:00</span>
+              </div>
+        </div>
     </body>
 </html>
